--- a/plist/mylan.plist
+++ b/plist/mylan.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESign-IPA/ESign-Kho%CC%9Bindvn_iPhone%20Distribution:%20BANK%20NEGARA%20INDONESIA%20(PERSERO),%20PT%20TBK.ipa</string>
+					<string>https://github.com/nhutnguyenminh2/huongdan/raw/main/ipa/Mylan%20Inc..ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://esign-khoindvn.github.io/Logo-File/khoindvn-min.PNG</string>
+					<string>https://github.com/nhutnguyenminh2/huongdan/blob/main/img/esigngg.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -31,7 +31,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>ESign-Khơindvn</string>
+				<string>ESign-mylan</string>
 			</dict>
 		</dict>
 	</array>
