--- a/plist/mylan.plist
+++ b/plist/mylan.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/serdykee/serdykee.github.io/main/ipa/ESign_Migu.ipa</string>
+					<string>https://github.com/nhutnguyenminh2/huongdan/raw/main/ipa/mylan.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/serdykee/serdykee.github.io/main/image/serdykee.png</string>
+					<string>https://raw.githubusercontent.com/nhutnguyenminh2/huongdan/main/img/esigngg.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/serdykee/serdykee.github.io/main/image/serdykee.png</string>
+					<string>https://raw.githubusercontent.com/nhutnguyenminh2/huongdan/main/img/esigngg.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>ESign</string>
+				<string>Mylan esign</string>
 			</dict>
 		</dict>
 	</array>
