--- a/plist/mylan.plist
+++ b/plist/mylan.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/nhutnguyenminh2/huongdan/raw/main/ipa/mylan.ipa</string>
+					<string>https://github.com/nhutnguyenminh2/nhutnguyenminh2.github.io/raw/main/ipa/mylan.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/nhutnguyenminh2/huongdan/main/img/esigngg.png</string>
+					<string>https://raw.githubusercontent.com/nhutnguyenminh2/ipadown/main/img/esigngg.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/nhutnguyenminh2/huongdan/main/img/esigngg.png</string>
+					<string>https://raw.githubusercontent.com/nhutnguyenminh2/ipadown/main/img/esigngg.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
